# Kursach

./: .gitignore  CMakeLists.txt  README.md  classProduct.cpp  interfaceFuncs.cpp  interfaceFuncs.h  main.cpp  operationFuncs.h  operationsFunc.cpp  productClass.cpp  productClass.h  profileClass.cpp  profileClass.h  profileFuncs.cpp  profileFuncs.h  sonar-project.properties
.github/workflows/: build.yml
header/: Admin.h  Cart.h  Product.h  ProductContainer.h  ProductData.h  ProductIterator.h  Profile.h  ProfileControl.h  buyerwindow.h  enterwindow.h  interfaceFuncs.h  ioninfo.h  mainwindow.h  menu.h  modeChooseWindow.h  operationFuncs.h  profileFuncs.h  profileInterface.h  regwindow.h  sellermenu.h  sellerwindow.h
source/: Admin.cpp  Cart.cpp  Product.cpp  ProductContainer.cpp  ProductData.cpp  ProductIterator.cpp  Profile.cpp  ProfileControl.cpp  buyermenu.ui  buyerwindow.cpp  buyerwindow.ui  enterwindow.cpp  enterwindow.ui  interfaceFuncs.cpp  ioninfo.cpp  ioninfo.ui  main.cpp  mainwindow.cpp  mainwindow.ui  menu.cpp  modeChooseWindow.cpp  modechoosewindow.ui  operationsFunc.cpp  profileFuncs.cpp  profileInterface.cpp  regwindow.cpp  regwindow.ui  sellermenu.cpp  sellermenu.ui  sellerwindow.cpp  sellerwindow.ui
