cmake_minimum_required(VERSION 3.26)
project(untitled43)

set(CMAKE_CXX_STANDARD 23)

add_executable(untitled43 main.cpp
        operationsFunc.cpp
        operationFuncs.h
        interfaceFuncs.cpp
        interfaceFuncs.h
        productClass.cpp
        productClass.h
        profileClass.cpp
        profileClass.h
        profileFuncs.cpp
        profileFuncs.h
)
